# fitness-coach-site

./: .gitignore  CHANGELOG.md  PROJECT_STATE.md  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  setup_frontend.sh
backend/: .env  .env.example  README.md  pyproject.toml  quick_strength.db  requirements.txt  test_api.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_postgresql_schema.py  4ed5e9b5f8fd_replace_thumbnail_with_cloudinary.py  555c9800770b_fix_cloudinary_urls_real_assets.py  9d2c5b1f7b79_update_featured_media_content.py  a08876aafb84_add_training_level.py  acbe68a28975_swap_instagram_urls.py  c6c868746967_add_booking_domain_models.py  d7c9d9d9d9d9_refactor_phone_number_architecture.py  ec7378beb881_initial_backend_structure.py  f42aee0b8c1d_fix_cloudinary_urls.py  f4f83abd26fb_add_featured_media.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: health.py
backend/app/api/v1/: admin.py  bookings.py  featured_media.py  router.py
backend/app/core/: cloudinary.py  config.py  exceptions.py  responses.py
backend/app/db/: __init__.py  base.py  base_class.py  database.py  session.py
backend/app/models/: __init__.py  admin_user.py  availability.py  booking.py  enums.py  featured_media.py  payment.py
backend/app/schemas/: availability.py  booking.py  featured_media.py  media.py
backend/app/services/: availability_service.py  booking_service.py  media_provider.py  media_service.py  payment_service.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARDS.md  DATABASE.md  ROADMAP.md  (+5 more)
(+107 files in other folders)
